Fixed a bug with misaligned [+] icon

--- a/src/styles/legend.less
+++ b/src/styles/legend.less
@@ -125,9 +125,6 @@
 .dark .move-chart-option:hover{
   background-color: @gray-darker;
 }
-.move-chart-option.move-to-new-chart{
-  padding-left: 30px;
-}
 .move-chart-option .icon{
   display: block;
   height: 26px;
